force-app/main/default/objects/Negoptim__Orga_HE__c/Negoptim__Orga_HE__c.object-meta.xml
<CustomObject>
    <description>Hierarchy of products (segmentation) needed for assortment management</description>
    <label>Hierarchy Element</label>
    <nameField>
        <label>Hierarchy Element</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hierarchy Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>