force-app/main/default/objects/Negoptim__Orga_HE__c/fields/KercadelacDisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>KercadelacDisplayOrder__c</fullName>
    <label>Kercadelac Display Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>