force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Full_Name__c</fullName>
    <description>Full name of the element</description>
    <inlineHelpText>Specify the full name of the element</inlineHelpText>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>