force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Level__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Level__c</fullName>
    <label>Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>