force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Logo__c</fullName>
    <formula>IMAGE( Negoptim__URL_logo__c, &quot;Pas d&apos;image&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>