force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Long_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Long_Name_1__c</fullName>
    <formula>CASE( Negoptim__Level__c, 
0, Name, 
1, Name, 
2, Name, 
3, Negoptim__Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
4, Negoptim__Parent_Element__r.Negoptim__Parent_Element__r.Name &amp; &apos; - &apos; &amp; Name, 
&apos;..&apos; &amp; Name)</formula>
    <label>Long Name 1</label>
    <type>Text</type>
</CustomField>