force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Path__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>