force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Set_NegoScope_level__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Set_NegoScope_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set NegoScope level</label>
    <type>Checkbox</type>
</CustomField>