force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Set_Product_link_level__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Set_Product_link_level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to filter Org_he lookup in Products object</description>
    <label>Set Product link level</label>
    <type>Checkbox</type>
</CustomField>