force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__Status_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Status_BDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Begin date of the status</description>
    <label>Status Begin Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>