force-app/main/default/objects/Negoptim__Orga_HE__c/fields/Negoptim__URL_logo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__URL_logo__c</fullName>
    <label>URL logo</label>
    <type>Url</type>
</CustomField>