force-app/main/default/objects/Negoptim__Orga_HE__c/fields/SPKERCADELACLogoSegm__c.field-meta.xml
<CustomField>
    <fullName>SPKERCADELACLogoSegm__c</fullName>
    <formula>IF ( RecordType.DeveloperName =&quot;Product&quot;,

IMAGE(&apos;/resource/LogosSegmentation/LogosSegmentation/&apos; + Negoptim__Elt_Code__c +&apos;.png&apos;, &apos;&apos; , 72, 120), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPKERCADELAC Logo Segmen</label>
    <type>Text</type>
</CustomField>