force-app/main/default/objects/Negoptim__Orga_HE__c/recordTypes/Negoptim__Product.recordType-meta.xml
<RecordType>
    <fullName>Negoptim__Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>