force-app/main/default/objects/Negoptim__Orga_HE__c/listViews/Negoptim__All.listView-meta.xml
<ListView>
    <fullName>Negoptim__All</fullName>
    <columns>NAME</columns>
    <columns>Negoptim__Elt_Code__c</columns>
    <columns>Negoptim__Level__c</columns>
    <columns>Negoptim__Status__c</columns>
    <columns>Negoptim__Status_BDate__c</columns>
    <columns>Negoptim__Status_EDate__c</columns>
    <columns>Negoptim__Set_Assortment_Cluster_level__c</columns>
    <columns>Negoptim__Set_Assortment_nego_level__c</columns>
    <columns>Negoptim__Set_Product_link_level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>