force-app/main/default/objects/Negoptim__Orga_HE__c/listViews/Niveau2.listView-meta.xml
<ListView>
    <fullName>Niveau2</fullName>
    <columns>Negoptim__Elt_Code__c</columns>
    <columns>NAME</columns>
    <columns>SPKERCADELACLogoSegm__c</columns>
    <columns>Negoptim__Level__c</columns>
    <columns>Negoptim__Parent_Element__c</columns>
    <columns>KercadelacDisplayOrder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Negoptim__Orga_HE__c.Negoptim__Product</value>
    </filters>
    <filters>
        <field>Negoptim__Level__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Niveau 2</label>
</ListView>