force-app/main/default/objects/Negoptim__Orga_HE__c/listViews/Tous_les_niveaux.listView-meta.xml
<ListView>
    <fullName>Tous_les_niveaux</fullName>
    <columns>Negoptim__Elt_Code__c</columns>
    <columns>NAME</columns>
    <columns>SPKERCADELACLogoSegm__c</columns>
    <columns>Negoptim__Level__c</columns>
    <columns>Negoptim__Parent_Element__c</columns>
    <columns>KercadelacDisplayOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les niveaux</label>
</ListView>